--- a/nodejs/www/map.css
+++ b/nodejs/www/map.css
@@ -268,9 +268,10 @@ label[for="totalRoof"] {
 }
 
 .leaflet-pm-toolbar .leaflet-pm-icon-rectangle {
-    background-image: url(<svg width="800px" height="800px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M1 3v18h22V3zm21 17H2V4h20z"/><path opacity=".25" d="M2 4h20v16H2z"/><path fill="none" d="M0 0h24v24H0z"/></svg>);
+    background-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22 width%3D%22800px%22 height%3D%22800px%22 viewBox%3D%220%200%2024%2024%22%3E%3Cpath d%3D%22M1%203v18h22V3zm21%2017H2V4h20z%22%2F%3E%3Cpath opacity%3D%22.25%22 d%3D%22M2%204h20v16H2z%22%2F%3E%3Cpath fill%3D%22none%22 d%3D%22M0%200h24v24H0z%22%2F%3E%3C%2Fsvg%3E');
     margin-left: 145px;
 }
+
 
 .leaflet-pm-toolbar .leaflet-pm-icon-rectangle::before {
     content: 'คลิ๊กที่นี่เพื่อวาด';
@@ -295,6 +296,7 @@ label[for="totalRoof"] {
     width: 213px;
     height: 40px;
     text-align: center;
+    margin-top: 20px;
     border-radius: 13px;
 }
 
